Fixing hero unid align

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -227,6 +227,10 @@ div.bs-docs-example blockquote{
 		font-family: @sansFontFamily;
 		font-weight: 700;
 	}
+	.hero-unit{
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 #above-content, #sidebar1, #sidebar2 , #below-content{
@@ -2833,6 +2837,10 @@ button[name="Search"]{
 		z-index: 2;
 		height: 100%;
 		width: 100%;
+		-webkit-box-sizing: border-box;
+		   -moz-box-sizing: border-box;
+				box-sizing: border-box;
+
 		> *{
 			color: @white;
 			margin-left: auto;
